--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -124,6 +124,9 @@
   flex-direction: row;
   justify-content: space-between;
 }
+.ticket-item-name p {
+  text-align: left;
+}
 
 .total-pieces {
   text-align: center;
