--- a/src/components/FinalReceipt/index.module.scss
+++ b/src/components/FinalReceipt/index.module.scss
@@ -132,6 +132,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  p {
+    text-align: left;
+  }
 }
 
 .total-pieces {
