--- a/src/components/NewOrderServiceItem/index.module.css
+++ b/src/components/NewOrderServiceItem/index.module.css
@@ -7,13 +7,17 @@
   animation: start 0.1s ease;
   position: relative;
 }
-.service-item:hover > .delete-service {
+.service-item:hover > .delete-service, .service-item:hover .update-service {
   display: flex;
+}
+.service-item.selected {
+  border: 2px solid #FF5733;
 }
 
 .service {
   display: flex;
   padding: 10px;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
@@ -65,6 +69,19 @@
   display: none;
   border-radius: 50%;
   border: solid 2px red;
+  font-size: 14px;
+  align-items: center;
+  justify-content: center;
+}
+
+.update-service {
+  position: absolute;
+  top: 2.5px;
+  left: 2.5px;
+  width: 15px;
+  height: 15px;
+  display: none;
+  border-radius: 50%;
   font-size: 14px;
   align-items: center;
   justify-content: center;
