--- a/src/components/NewOrderServiceItem/index.module.scss
+++ b/src/components/NewOrderServiceItem/index.module.scss
@@ -8,15 +8,21 @@
   position: relative;
 
   &:hover {
-    > .delete-service {
+    > .delete-service, .update-service {
       display: flex;
     }
+
+  }
+
+  &.selected {
+    border: 2px solid #FF5733;
   }
 }
 
 .service {
   display: flex;
   padding: 10px;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
@@ -70,6 +76,19 @@
   display: none;
   border-radius: 50%;
   border: solid 2px red;
+  font-size: 14px;
+  align-items: center;
+  justify-content: center;
+}
+
+.update-service {
+  position: absolute;
+  top: 2.5px;
+  left: 2.5px;
+  width: 15px;
+  height: 15px;
+  display: none;
+  border-radius: 50%;
   font-size: 14px;
   align-items: center;
   justify-content: center;
